# app-desktop

./: .eslintrc.cjs  .gitignore  components.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
src/: App.tsx  index.css  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/migrations/2023-08-14-193910_initializations/: down.sql  up.sql
src-tauri/src/: constants.rs  database.rs  events.rs  main.rs  models.rs  schema.rs  state.rs  utils.rs
src-tauri/src/handlers/: auth.rs  gameinstallation.rs  initialization.rs  mod.rs  modloader.rs  state.rs
src/components/: Header.tsx  Layout.tsx  LoadingScreen.tsx  MachineDisplay.tsx  ModManagerCard.tsx  UserBlock.tsx
src/components/ui/: accordion.tsx  badge.tsx  button.tsx  card.tsx  form.tsx  input.tsx  label.tsx  progress.tsx  scroll-area.tsx  sheet.tsx
src/i18n/: config.ts
src/i18n/locales/en/: translations.json
src/lib/: commands.ts  constants.ts  pocketbase.ts  store.ts  utils.ts
src/lib/components/: ContainerScreen.svelte  LoadingScreen.svelte  MachineDisplay.svelte
src/lib/components/game/: StepCheckGame.svelte
src/lib/components/initialization-screen/: InitializationScreen.svelte  SelectGamePath.svelte
src/lib/i18n/: index.ts
src/lib/i18n/locales/: en.json
src/lib/machines/: game-machine.ts  initialization-machine.ts
src/lib/schemas/: user.ts
src/lib/stores/: app.ts
src/machines/: mod-initialization-machine.ts  mod-initialization-machine.typegen.ts  mod-installation-machine.ts  mod-installation-machine.typegen.ts
src/models/: mod.ts  user.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte  +page.ts  dashboard.tsx  login.tsx  mod-initialization.tsx  mod-view.tsx  mods-list.tsx  mods.tsx
src/routes/initialization/: +page.svelte  SelectGamePath.svelte
src/routes/login/: +page.svelte
src/routes/splashscreen/: +page.svelte
src/schemas/: loginSchema.ts
src/stores/: modsStore.ts  userStore.ts
