[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.4.0", features = [] }
reqwest = { version = "0.11.18" }
zip = { version = "0.6.6", default-features = false, features = ["deflate"] }
regex = "1.9.1"
error-chain = "0.12.2"

[features]
custom-protocol = [ "tauri/custom-protocol" ]
