[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
tauri = { version = "1.4.0", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
reqwest = { version = "0.11.18" }
zip = { version = "0.6.6", default-features = false, features = ["deflate"] }
regex = { version = "1.9.1" }
diesel = { version = "2.1.0", features = ["sqlite"] }
diesel_migrations = { version = "2.1.0" }
libsqlite3-sys = { version = "0.26.0", features = ["bundled"] }
pocketbase-sdk = { version = "0.1.1" }

[features]
custom-protocol = ["tauri/custom-protocol"]
