[package]
name = "lets-school-central-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "lets-school-central-app"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.4.0", features = [
    "window-unminimize",
    "window-maximize",
    "window-show",
    "window-hide",
    "window-unmaximize",
    "window-minimize",
    "window-start-dragging",
    "window-close",
    "fs-remove-file",
    "fs-read-file",
    "fs-write-file",
    "http-all",
    "fs-read-dir",
    "fs-exists",
    "shell-open",
] }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-persisted-scope = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
zip = { version = "0.6.6", default-features = false, features = ["deflate"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
